[project]
name = "learn-bedrock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "boto3>=1.39.4",
    "chromadb>=1.0.20",
    "ipykernel>=6.29.5",
    "langchain-aws>=0.2.28",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.6",
    "tiktoken>=0.11.0",
]
